--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/php:8.3-node-browsers
+      - image: circleci/php:8.3.0
 
     working_directory: ~/laravel
 
